--- a/week3/help.html
+++ b/week3/help.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header>
-    <img id="" src="" alt=""/>
+    <img id="cheese-logo" src="cheese_oh_cheese_400x400.jpg" alt="cheese"/>
     <h1>The Magical World of Cheese!</h1><br><br>
     <ul>
         <li><a href="history.html" style="text-decoration: none">The History of Cheese</a></li>
@@ -29,15 +29,13 @@
                     <td><input type="text" name="email" value="" /></td>
                 </tr>
                 <tr>
-                    <td><label>What is your cheese</label></td>
-                    <td><textarea name="comments" cols="45" rows="5">
-</textarea></td>
+                    <td><label>What is your cheese problem?</label></td>
+                    <td><textarea name="comments" cols="45" rows="5"></textarea></td>
                 </tr>
                 <tr>
                     <td colspan=2><input type="submit" value="Submit" /></td>
                 </tr>
             </table>
-        </fieldset>
     </form>
     <br><br>
 </main>
