--- a/week3/help.html
+++ b/week3/help.html
@@ -29,6 +29,12 @@
                     <td><input type="text" name="email" value="" /></td>
                 </tr>
                 <tr>
+                    <td><label>Favourite Cheese</label></td>
+                    <td><input type="radio" name="fav" value="feta" />Feta</td>
+                    <td><input type="radio" name="fav" value="gouda" />Gouda</td>
+                    <td><input type="radio" name="fav" value="other" />Other</td>
+                </tr>
+                <tr>
                     <td><label>What is your cheese problem?</label></td>
                     <td><textarea name="comments" cols="45" rows="5"></textarea></td>
                 </tr>
