--- a/Week10/self/sendGET.html
+++ b/Week10/self/sendGET.html
@@ -5,10 +5,14 @@
     <title></title>
 </head>
 <body>
+<form action="printGET.php" method="get">
+    <label>type</label><input type="text" name="type">
+    <label>colour</label><input type="text" name="colour">
+</form>
 <?php
 $type = $_GET["type"];
 $colour = $_GET["colour"];
 ?>
-<a href="printGET.php?type="cat&colour=red">link</a>
+<a href="printGET.php?type=cat&colour=red">link</a>
 </body>
 </html>
