--- a/Week10/self/sendGET.html
+++ b/Week10/self/sendGET.html
@@ -8,11 +8,11 @@
 <form action="printGET.php" method="get">
     <label>type</label><input type="text" name="type">
     <label>colour</label><input type="text" name="colour">
+    <input type="submit">
 </form>
-<?php
-$type = $_GET["type"];
-$colour = $_GET["colour"];
-?>
-<a href="printGET.php?type=cat&colour=red">link</a>
+
+
+<a href="printGET.php?type=test123&colour=test321">link</a>
+
 </body>
 </html>
