--- a/Week10/self/sendGET.html
+++ b/Week10/self/sendGET.html
@@ -5,14 +5,8 @@
     <title></title>
 </head>
 <body>
-<form action="printGET.php" method="get">
-    <label>type</label><input type="text" name="type">
-    <label>colour</label><input type="text" name="colour">
-    <input type="submit">
-</form>
 
-
-<a href="printGET.php?type=test123&colour=test321">link</a>
+<a href="printGET.php?type=CAT&colour=red">link</a>
 
 </body>
 </html>
