--- a/Week10/self/sendPOST.html
+++ b/Week10/self/sendPOST.html
@@ -5,11 +5,11 @@
     <title></title>
 </head>
 <body>
-<form action="printGET.php" method="get">
+<form action="printPOST.php" method="post">
     <label>title</label><input type="text" name="title">
     <label>content</label><input type="textarea" name="content">
     <label>category</label>
-    <select>
+    <select name="category">
         <option value="cat">cat</option>
         <option value="dog">dog</option>
         <option value="misc">misc</option>
