--- a/Week10/self/sendPOST.html
+++ b/Week10/self/sendPOST.html
@@ -5,7 +5,11 @@
     <title></title>
 </head>
 <body>
-<form action="printPOST.php" method="post">
+gdsfdfgshgfdsdghdsbfdbhgfds
+gfsdddddgfgfdgfd
+gfdgfddddddddddgf
+fdgfdgdgfdgfd
+<form action="printPOST.php" method="get">
     <label>title</label><input type="text" name="title">
     <label>content</label><input type="textarea" name="content">
     <label>category</label>
