--- a/Week11/index.html
+++ b/Week11/index.html
@@ -11,7 +11,13 @@
     <h2>Keeping track of all the pesky little bugs</h2>
 </header>
 <navigation>
-
+<ul>
+    <li><a href="bugs.html">All Bug Items</a></li>
+    <li><a href="bugs.html">Android Bugs</a></li>
+    <li><a href="bugs.html">iOS Bugs</a></li>
+    <li><a href="bugs.html">Windows Bugs</a></li>
+    <li><a href="bugs.html">Insert Bug</a></li>
+</ul>
 </navigation>
 <content>
 
