--- a/Week11/addbugs.html
+++ b/Week11/addbugs.html
@@ -31,6 +31,7 @@
         </select>
         <input type="submit" value="Submit" />
     </form>
+</content>
 <footer>
     Designed by Ioannis Panagiotou, 2016
 </footer>
