--- a/Week11/addbugs.html
+++ b/Week11/addbugs.html
@@ -21,10 +21,10 @@
 </navigation>
 <content>
     <form>
-        Bug Name <input type="text" name="name" />
-        Bug Summary <textarea name="summary"></textarea>
+        Bug Name <input type="text" name="name" required/>
+        Bug Summary <textarea name="summary" required></textarea>
         Bug Category
-        <select name="category">
+        <select name="category" required>
             <option value="andr">Android</option>
             <option value="ios">iOS</option>
             <option value="win">Windows</option>
