--- a/Week11/showbugs.html
+++ b/Week11/showbugs.html
@@ -10,7 +10,7 @@
     <h1>BugTracker</h1>
     <h2>Keeping track of all the pesky little bugs</h2>
 </header>
-<navigation>
+<nav>
     <ul>
         <li><a href="bugs.html">All Bug Items</a></li>
         <li><a href="bugs.html">Android Bugs</a></li>
@@ -18,7 +18,7 @@
         <li><a href="bugs.html">Windows Bugs</a></li>
         <li><a href="bugs.html">Insert Bug</a></li>
     </ul>
-</navigation>
+</nav>
 <content>
     <form>
         Bug Name <input type="text" name="name" />
