--- a/Week11/showbugs.html
+++ b/Week11/showbugs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>BugTracker</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
 <header>
@@ -20,7 +20,7 @@
         <li><a href="bugs.html">Insert Bug</a></li>
     </ul>
 </nav>
-<content>
+<content id="con">
     <form>
         Bug Name <input type="text" name="name" />
         Bug Summary <textarea name="summary"></textarea>
