--- a/Week11/addbugs.html
+++ b/Week11/addbugs.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>BugTracker</title>
+    <link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <header>
@@ -10,7 +11,7 @@
     <h1>BugTracker</h1>
     <h2>Keeping track of all the pesky little bugs</h2>
 </header>
-<navigation>
+<nav>
     <ul>
         <li><a href="bugs.html">All Bug Items</a></li>
         <li><a href="bugs.html">Android Bugs</a></li>
@@ -18,8 +19,8 @@
         <li><a href="bugs.html">Windows Bugs</a></li>
         <li><a href="bugs.html">Insert Bug</a></li>
     </ul>
-</navigation>
-<content>
+</nav>
+<content id="con">
     <form>
         Bug Name <input type="text" name="name" required/>
         Bug Summary <textarea name="summary" required></textarea>
