--- a/Week11/index.html
+++ b/Week11/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>BugTracker</title>
+    <link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <header>
@@ -10,7 +11,7 @@
     <h1>BugTracker</h1>
     <h2>Keeping track of all the pesky little bugs</h2>
 </header>
-<navigation>
+<nav>
 <ul>
     <li><a href="bugs.html">All Bug Items</a></li>
     <li><a href="bugs.html">Android Bugs</a></li>
@@ -18,14 +19,14 @@
     <li><a href="bugs.html">Windows Bugs</a></li>
     <li><a href="bugs.html">Insert Bug</a></li>
 </ul>
-</navigation>
-<content>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+</nav>
+<content id="con">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
     ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
     ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
     reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-    mollit anim id est laborum.
+    mollit anim id est laborum.</p>
 </content>
 <footer>
 Designed by Ioannis Panagiotou, 2016
