--- a/Week11/showbugs.html
+++ b/Week11/showbugs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>BugTracker</title>
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <header>
