--- a/Week11/index.html
+++ b/Week11/index.html
@@ -6,11 +6,13 @@
     <link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
+<div id="maincontent">
 <header>
     <img id="logo" src="logo.png">
     <h1>BugTracker</h1>
     <h2>Keeping track of all the pesky little bugs</h2>
 </header>
+
 <nav>
 <ul>
     <li><a href="bugs.html">All Bug Items</a></li>
@@ -31,5 +33,6 @@
 <footer>
 Designed by Ioannis Panagiotou, 2016
 </footer>
+</div>
 </body>
 </html>
