--- a/Week11/showbugs.html
+++ b/Week11/showbugs.html
@@ -22,14 +22,15 @@
 </nav>
 <content id="con">
     <form>
-        Bug Name <input type="text" name="name" />
-        Bug Summary <textarea name="summary"></textarea>
+        Bug Name <input type="text" name="name" /><br>
+        Bug Summary <textarea name="summary"></textarea><br>
         Bug Category
         <select name="category">
             <option value="andr">Android</option>
             <option value="ios">iOS</option>
             <option value="win">Windows</option>
         </select>
+        <br>
         <input type="submit" value="Submit" />
     </form>
 </content>
