--- a/Week11/addbugs.html
+++ b/Week11/addbugs.html
@@ -22,14 +22,15 @@
 </nav>
 <content id="con">
     <form>
-        Bug Name <input type="text" name="name" required/>
-        Bug Summary <textarea name="summary" required></textarea>
+        Bug Name <input type="text" name="name" required/><br>
+        Bug Summary <textarea name="summary" required></textarea><br>
         Bug Category
         <select name="category" required>
             <option value="andr">Android</option>
             <option value="ios">iOS</option>
             <option value="win">Windows</option>
         </select>
+        <br>
         <input type="submit" value="Submit" />
     </form>
 </content>
