--- a/Week11/showbugs.html
+++ b/Week11/showbugs.html
@@ -22,10 +22,10 @@
 </nav>
 <content id="con">
     <form>
-        Bug Name <input type="text" name="name" /><br>
-        Bug Summary <textarea name="summary"></textarea><br>
+        Bug Name <input type="text" name="name" required/><br>
+        Bug Summary <textarea name="summary" required></textarea><br>
         Bug Category
-        <select name="category">
+        <select name="category" required>
             <option value="andr">Android</option>
             <option value="ios">iOS</option>
             <option value="win">Windows</option>
