--- a/Week11/showbugs.html
+++ b/Week11/showbugs.html
@@ -22,16 +22,12 @@
 </nav>
 <content id="con">
     <form>
-        Bug Name <input type="text" name="name" required/><br>
-        Bug Summary <textarea name="summary" required></textarea><br>
-        Bug Category
-        <select name="category" required>
-            <option value="andr">Android</option>
-            <option value="ios">iOS</option>
-            <option value="win">Windows</option>
-        </select>
-        <br>
-        <input type="submit" value="Submit" />
+        <input type="textarea" name="name" value="StageFright" disabled/><br>
+        <input type="textarea" name="name" value="Android" disabled/><br>
+        <input type="textarea" name="name" value="Stagefright is the collective name for a
+        group of software bugs, that affect versions 2.2 and newer of the Android operating
+        system, allowing an attacker to perform arbitrary operations on the victim device
+         through remote code execution and privilege escalation." disabled/><br>
     </form>
 </content>
 <footer>
