--- a/Week11/showbugs.html
+++ b/Week11/showbugs.html
@@ -22,9 +22,9 @@
 </nav>
 <content id="con">
     <form>
-        <input type="textarea" name="name" value="StageFright" disabled/><br>
-        <input type="textarea" name="name" value="Android" disabled/><br>
-        <input type="textarea" name="name" value="Stagefright is the collective name for a
+        <textarea name="name" value="StageFright" disabled/><br>
+        <textarea name="name" value="Android" disabled/><br>
+        <textarea name="name" value="Stagefright is the collective name for a
         group of software bugs, that affect versions 2.2 and newer of the Android operating
         system, allowing an attacker to perform arbitrary operations on the victim device
          through remote code execution and privilege escalation." disabled/><br>
