--- a/Week11/showbugs.html
+++ b/Week11/showbugs.html
@@ -22,12 +22,12 @@
 </nav>
 <content id="con">
     <form>
-        <textarea name="name" value="StageFright" disabled/><br>
-        <textarea name="name" value="Android" disabled/><br>
+        <textarea name="name" value="StageFright" disabled></textarea><br>
+        <textarea name="name" value="Android" disabled></textarea><br>
         <textarea name="name" value="Stagefright is the collective name for a
         group of software bugs, that affect versions 2.2 and newer of the Android operating
         system, allowing an attacker to perform arbitrary operations on the victim device
-         through remote code execution and privilege escalation." disabled/><br>
+         through remote code execution and privilege escalation." disabled></textarea><br>
     </form>
 </content>
 <footer>
