--- a/Week11/showbugs.html
+++ b/Week11/showbugs.html
@@ -22,7 +22,7 @@
 </nav>
 <content id="con">
     <form>
-        < type="text" name="name" value="StageFright" disabled/><br>
+        <input type="text" name="name" value="StageFright" disabled><br>
         <textarea name="name" value="Android" disabled></textarea><br>
         <textarea name="name" value="Stagefright is the collective name for a
         group of software bugs, that affect versions 2.2 and newer of the Android operating
