--- a/Week11/index.html
+++ b/Week11/index.html
@@ -19,7 +19,7 @@
     <li><a href="showbugs.html">Android Bugs</a></li>
     <li><a href="showbugs.html">iOS Bugs</a></li>
     <li><a href="showbugs.html">Windows Bugs</a></li>
-    <li><a href="showbugs.html">Insert Bug</a></li>
+    <li><a href="addbugs.html">Insert Bug</a></li>
 </ul>
 </nav>
 <content id="con">
