--- a/Week11/showbugs.html
+++ b/Week11/showbugs.html
@@ -21,14 +21,12 @@
     </ul>
 </nav>
 <content id="con">
-    <form>
-        <input type="text" name="name" value="StageFright" disabled><br>
-        <textarea name="name" value="Android" disabled></textarea><br>
-        <textarea name="name" value="Stagefright is the collective name for a
+        <h3>StageFright</h3><br>
+        <h5>Android</h5><br>
+        <p>Stagefright is the collective name for a
         group of software bugs, that affect versions 2.2 and newer of the Android operating
         system, allowing an attacker to perform arbitrary operations on the victim device
-         through remote code execution and privilege escalation." disabled></textarea><br>
-    </form>
+         through remote code execution and privilege escalation.</p><br>
 </content>
 <footer>
     Designed by Ioannis Panagiotou, 2016
